[project]
name = "message-radar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "telethon>=1.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]

[tool.ruff]
include = ["./*.py", "./**/*.py"]
line-length = 100
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401", # (any-type)
    "COM812", # (missing-trailing-comma)
    "D100",  # (undocumented-public-module)
    "D203", # (one-blank-line-before-class)
    "D213", # (multi-line-summary-second-line)
    "ISC001" # (single-line-implicit-string-concatenation)
]
extend-select = ["I"]